--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -138,6 +138,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Editor.h" />
+    <ClInclude Include="src\Window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Editor.cpp" />
+    <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Lemon\Lemon.vcxproj">
       <Project>{2087970D-8C9B-BFBE-551D-631EC1F0BBEF}</Project>
     </ProjectReference>
