--- a/Lemon/Lemon.vcxproj
+++ b/Lemon/Lemon.vcxproj
@@ -76,7 +76,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_OPENGL;LEMON_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty\imgui;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -96,7 +96,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_OPENGL;LEMON_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty\imgui;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -119,7 +119,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>LemonPCH.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_OPENGL;LEMON_SHIPPING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;LEMON_PLATFORM_WINDOW;LEMON_BUILD_DLL;GLFW_INCLUDE_NONE;LEMON_GRAPHICS_D3D11;LEMON_SHIPPING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>Src;ThirdParty\spdlog\include;ThirdParty\imgui;ThirdParty\glm;ThirdParty\std_image;..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -147,6 +147,17 @@
     <ClInclude Include="Src\Lemon.h" />
     <ClInclude Include="Src\LemonPCH.h" />
     <ClInclude Include="Src\Log\Log.h" />
+    <ClInclude Include="Src\RHI\D3D11\D3D11DynamicRHI.h" />
+    <ClInclude Include="Src\RHI\D3D11\D3D11Helpers.h" />
+    <ClInclude Include="Src\RHI\D3D11\D3D11RHI.h" />
+    <ClInclude Include="Src\RHI\D3D11\D3D11SwapChain.h" />
+    <ClInclude Include="Src\RHI\DynamicRHI.h" />
+    <ClInclude Include="Src\RHI\RHICommandList.h" />
+    <ClInclude Include="Src\RHI\RHIDeviceAdapter.h" />
+    <ClInclude Include="Src\RHI\RHI.h" />
+    <ClInclude Include="Src\RHI\RHIResources.h" />
+    <ClInclude Include="Src\RHI\RHISwapChain.h" />
+    <ClInclude Include="Src\RHI\RHIViewport.h" />
     <ClInclude Include="Src\Renderer\Renderer.h" />
     <ClInclude Include="Src\Utils\FileUtils.h" />
     <ClInclude Include="ThirdParty\glm\glm\common.hpp" />
@@ -572,6 +583,12 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Src\Log\Log.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11DynamicRHI.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11SwapChain.cpp" />
+    <ClCompile Include="Src\RHI\DynamicRHI.cpp" />
+    <ClCompile Include="Src\RHI\RHI.cpp" />
+    <ClCompile Include="Src\RHI\RHICommandList.cpp" />
+    <ClCompile Include="Src\RHI\RHIViewport.cpp" />
     <ClCompile Include="Src\Renderer\Renderer.cpp" />
     <ClCompile Include="Src\Utils\FileUtils.cpp" />
     <ClCompile Include="ThirdParty\std_image\std_image.cpp" />
