--- a/Lemon/Lemon.vcxproj.filters
+++ b/Lemon/Lemon.vcxproj.filters
@@ -13,6 +13,9 @@
     <Filter Include="Src\RHI">
       <UniqueIdentifier>{BF0DE809-2BED-66A5-3405-F27BA063CD06}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\RHI\D3D11">
+      <UniqueIdentifier>{EB373F6E-57F8-BAA4-2033-04228CB2FF80}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Src\Renderer">
       <UniqueIdentifier>{532574A1-3F88-0346-E80D-3CFCD44FCFC8}</UniqueIdentifier>
     </Filter>
@@ -71,6 +74,36 @@
     </ClInclude>
     <ClInclude Include="Src\Log\Log.h">
       <Filter>Src\Log</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\D3D11\D3D11DynamicRHI.h">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\D3D11\D3D11Helpers.h">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\D3D11\D3D11RHI.h">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\D3D11\D3D11SwapChain.h">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\DynamicRHI.h">
+      <Filter>Src\RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\RHI.h">
+      <Filter>Src\RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\RHICommandList.h">
+      <Filter>Src\RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\RHIDeviceAdapter.h">
+      <Filter>Src\RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\RHIResources.h">
+      <Filter>Src\RHI</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\RHI\RHISwapChain.h">
+      <Filter>Src\RHI</Filter>
     </ClInclude>
     <ClInclude Include="Src\RHI\RHIViewport.h">
       <Filter>Src\RHI</Filter>
@@ -1323,16 +1356,6 @@
     <ClInclude Include="ThirdParty\std_image\std_image.h">
       <Filter>ThirdParty\std_image</Filter>
     </ClInclude>
-    <ClInclude Include="Src\RHI\DynamicRHI.h" />
-    <ClInclude Include="Src\RHI\RHI.h" />
-    <ClInclude Include="Src\RHI\D3D11\D3D11DynamicRHI.h" />
-    <ClInclude Include="Src\RHI\RHIDeviceAdapter.h" />
-    <ClInclude Include="Src\RHI\D3D11\D3D11Helpers.h" />
-    <ClInclude Include="Src\RHI\D3D11\D3D11RHI.h" />
-    <ClInclude Include="Src\RHI\RHISwapChain.h" />
-    <ClInclude Include="Src\RHI\RHIResources.h" />
-    <ClInclude Include="Src\RHI\D3D11\D3D11SwapChain.h" />
-    <ClInclude Include="Src\RHI\RHICommandList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Core\Engine.cpp">
@@ -1350,6 +1373,21 @@
     <ClCompile Include="Src\Log\Log.cpp">
       <Filter>Src\Log</Filter>
     </ClCompile>
+    <ClCompile Include="Src\RHI\D3D11\D3D11DynamicRHI.cpp">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\RHI\D3D11\D3D11SwapChain.cpp">
+      <Filter>Src\RHI\D3D11</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\RHI\DynamicRHI.cpp">
+      <Filter>Src\RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\RHI\RHI.cpp">
+      <Filter>Src\RHI</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\RHI\RHICommandList.cpp">
+      <Filter>Src\RHI</Filter>
+    </ClCompile>
     <ClCompile Include="Src\RHI\RHIViewport.cpp">
       <Filter>Src\RHI</Filter>
     </ClCompile>
@@ -1362,10 +1400,5 @@
     <ClCompile Include="ThirdParty\std_image\std_image.cpp">
       <Filter>ThirdParty\std_image</Filter>
     </ClCompile>
-    <ClCompile Include="Src\RHI\DynamicRHI.cpp" />
-    <ClCompile Include="Src\RHI\RHI.cpp" />
-    <ClCompile Include="Src\RHI\D3D11\D3D11DynamicRHI.cpp" />
-    <ClCompile Include="Src\RHI\D3D11\D3D11SwapChain.cpp" />
-    <ClCompile Include="Src\RHI\RHICommandList.cpp" />
   </ItemGroup>
 </Project>
