--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,24 +1,24 @@
 [Window][Viewport]
 Pos=0,24
-Size=1519,989
+Size=1290,833
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene]
-Pos=1521,24
-Size=395,441
+Pos=1292,24
+Size=288,417
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=1521,467
-Size=395,546
+Pos=1292,443
+Size=288,414
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][EditorDockspace]
 Pos=0,0
-Size=1916,1013
+Size=1580,857
 Collapsed=0
 
 [Window][Debug##Default]
@@ -32,19 +32,19 @@ Size=550,680
 Collapsed=0
 
 [Window][About]
-Pos=459,177
+Pos=349,151
 Size=366,102
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=-21,266
-Size=982,627
+Pos=177,135
+Size=917,651
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x14D65919 Window=0x99ECE49F Pos=-1918,51 Size=1916,989 Split=X
-  DockNode    ID=0x00000001 Parent=0x14D65919 SizeRef=1519,857 Selected=0x995B0CF8
-  DockNode    ID=0x00000002 Parent=0x14D65919 SizeRef=395,857 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=316,371 Selected=0x18B8C0DE
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=316,460 Selected=0xC89E3217
+DockSpace     ID=0x14D65919 Window=0x99ECE49F Pos=259,209 Size=1580,833 Split=X
+  DockNode    ID=0x00000001 Parent=0x14D65919 SizeRef=1290,371 Selected=0x995B0CF8
+  DockNode    ID=0x00000002 Parent=0x14D65919 SizeRef=288,371 Split=Y Selected=0x18B8C0DE
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=788,417 Selected=0x18B8C0DE
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=788,414 Selected=0xC89E3217
 
