--- a/Lemon/Lemon.vcxproj
+++ b/Lemon/Lemon.vcxproj
@@ -138,6 +138,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Containers\DynamicRHIResourceArray.h" />
+    <ClInclude Include="Src\Containers\ResourceArray.h" />
     <ClInclude Include="Src\Core\Core.h" />
     <ClInclude Include="Src\Core\Engine.h" />
     <ClInclude Include="Src\Core\ISystem.h" />
@@ -152,6 +154,7 @@
     <ClInclude Include="Src\Renderer\SceneRenderTargets.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11CommandList.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11DynamicRHI.h" />
+    <ClInclude Include="Src\RHI\D3D11\D3D11Resources.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11Utils.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11RHI.h" />
     <ClInclude Include="Src\RHI\D3D11\D3D11SwapChain.h" />
@@ -159,11 +162,11 @@
     <ClInclude Include="Src\RHI\DynamicRHI.h" />
     <ClInclude Include="Src\RHI\RHI.h" />
     <ClInclude Include="Src\RHI\RHICommandList.h" />
+    <ClInclude Include="Src\RHI\RHIDefinitions.h" />
     <ClInclude Include="Src\RHI\RHIDeviceAdapter.h" />
     <ClInclude Include="Src\RHI\RHIResources.h" />
     <ClInclude Include="Src\RHI\RHISwapChain.h" />
-    <ClInclude Include="Src\RHI\RHITexture.h" />
-    <ClInclude Include="Src\RHI\RHIViewport.h" />
+    <ClInclude Include="Src\RenderCore\Viewport.h" />
     <ClInclude Include="Src\Renderer\Renderer.h" />
     <ClInclude Include="Src\Utils\FileUtils.h" />
     <ClInclude Include="ThirdParty\glm\glm\common.hpp" />
@@ -594,13 +597,17 @@
     <ClCompile Include="Src\Renderer\SceneRenderTargets.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11CommandList.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11DynamicRHI.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11IndexBuffer.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11Shader.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11SwapChain.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11Texture.cpp" />
     <ClCompile Include="Src\RHI\D3D11\D3D11Utils.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11VertexBuffer.cpp" />
+    <ClCompile Include="Src\RHI\D3D11\D3D11VertexDeclaration.cpp" />
     <ClCompile Include="Src\RHI\DynamicRHI.cpp" />
     <ClCompile Include="Src\RHI\RHI.cpp" />
     <ClCompile Include="Src\RHI\RHICommandList.cpp" />
-    <ClCompile Include="Src\RHI\RHIViewport.cpp" />
+    <ClCompile Include="Src\RenderCore\Viewport.cpp" />
     <ClCompile Include="Src\Renderer\Renderer.cpp" />
     <ClCompile Include="Src\Utils\FileUtils.cpp" />
     <ClCompile Include="ThirdParty\std_image\std_image.cpp" />
