--- a/Lemon/Lemon.vcxproj
+++ b/Lemon/Lemon.vcxproj
@@ -149,6 +149,8 @@
     <ClInclude Include="Src\Lemon.h" />
     <ClInclude Include="Src\LemonPCH.h" />
     <ClInclude Include="Src\Log\Log.h" />
+    <ClInclude Include="Src\RenderCore\Geometry\Cube.h" />
+    <ClInclude Include="Src\RenderCore\Mesh.h" />
     <ClInclude Include="Src\RenderCore\RenderUtils.h" />
     <ClInclude Include="Src\Renderer\SceneRendering.h" />
     <ClInclude Include="Src\Renderer\SceneRenderTargets.h" />
@@ -592,6 +594,8 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Src\Log\Log.cpp" />
+    <ClCompile Include="Src\RenderCore\Geometry\Cube.cpp" />
+    <ClCompile Include="Src\RenderCore\Mesh.cpp" />
     <ClCompile Include="Src\RenderCore\RenderUtils.cpp" />
     <ClCompile Include="Src\Renderer\SceneRendering.cpp" />
     <ClCompile Include="Src\Renderer\SceneRenderTargets.cpp" />
